v1.6.0, 2020-01-08

* use of tox to run unittests consistently in a virtual environment
* build element database during installation from sources
* new source layout which offers many advantages
  (https://blog.ionelmc.ro/2014/05/25/python-packaging/#the-structure)
* remove Python2 code path, improve code readability
* fix use of the agg matplotlib backend with FitModel
* from this point on Github master will be broken on Python 2

v1.5.4, 2020-01-07 final python2 compatible release

* fix issue #84: edge case problemes in XRDML parser
* matplotlib compatibility improvements

v1.5.3, 2019-10-09

* issue #87: fix matplotlib inline backend in FitModel.fit
* enable parsing of Panalytical XRDML version >2.0
* issue 79: fix parsing of Sardana generated spec files; thanks to DS
* issue 81: fix parsing materials with space group 47
* packaging cleanup: remove gitignore and other dev-files
* issue 77: complete multiprocessing cleanup upon PowderModel.close()
* issue 76: cif parser: fix bug introduced in version 1.5.2

v1.5.2, 2019-06-28

* fix bug in PowderDiffraction where the last Bragg peak before tt_cutoff was
  omitted, thanks to NG for reporting the issue
* new model for calculating signal of mosaic small crystals
* add arbitrary line cut function
* fix parsing of empty scans in spec files
* remove geth5_map function -> use geth5_scan instead
* support inf/nan values in spec files
* setup.py fixes for Debian packaging
* CIF export: make _atom_site_label unique
* change of SMaterial.density to a unit of kg/m3
* deprecate the fit_xrr function, which will be remove in the next major
  version -> use the new FitModel
* new FitModel class for fitting of instances of LayerModel
* fix bug in PowderDiffraction used with enable_simulation=False

v1.5.1, 2019-01-07

* simple unit cell visualization function: Crystal.show_unitcell()
* add new 'radius' and 'color' properties to Elements
* improve testing of various unit cell settings in CIFFile