@@ -1,3 +1,5 @@
+* rename dummy element to "Dummy" and set sensible default parameters
+
 v1.6.0, 2020-01-08
 
 * use of tox to run unittests consistently in a virtual environment
